fix: fix fonts not showing in Firefox

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,4 +1,4 @@
-$family-sans-serif: 'Noto Sans', system-ui -apple-system, BlinkMacSystemFont,
+$family-sans-serif: 'Noto Sans', system-ui, -apple-system, BlinkMacSystemFont,
   'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
   'Segoe UI Emoji', 'Segoe UI Symbol';
 
